--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ scheme2c (1993.3.15.2-11) UNRELEASED; urgency=low
     - sizeof.cdecl (standard sizes on current architecture)
   * debhelper 8
   * accept armhf patch to debian/control and debian/rules (closes: #604665)
+  * allow parallel build (debian/rules)
 
- -- Barak A. Pearlmutter <bap@debian.org>  Tue, 23 Nov 2010 13:21:13 +0000
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 29 Nov 2010 21:56:08 +0000
 
 scheme2c (1993.3.15.2-10) unstable; urgency=low
 
