--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ scheme2c (1993.3.15.2-11) UNRELEASED; urgency=low
   * debhelper 8
   * accept armhf patch to debian/control and debian/rules (closes: #604665)
   * allow parallel build (debian/rules)
+  * merge upstream changes: increase AMD64 max heap size and ditch gensym
 
- -- Barak A. Pearlmutter <bap@debian.org>  Mon, 29 Nov 2010 21:56:08 +0000
+ -- Barak A. Pearlmutter <bap@debian.org>  Fri, 11 Mar 2011 10:54:37 +0000
 
 scheme2c (1993.3.15.2-10) unstable; urgency=low
 
