--- a/doc/smithnotes.tex
+++ b/doc/smithnotes.tex
@@ -57,12 +57,12 @@ types return.
 
 \subsection*{2.2 The Scheme Listener}
 
-\StoC\ is started by the command \textbf{sci}.  Once the command
+\StoC\ is started by the command \textbf{s2ci}.  Once the command
 is executed, the window looks like this:
 
 \begin{quote}
 \begin{verbatim}
-csh >sci
+csh >s2ci
 Scheme->C -- 01sep91jfb -- Copyright 1989 Digital Equipment Corporation
 >
 \end{verbatim}
