--- a/doc/index.tex
+++ b/doc/index.tex
@@ -383,53 +383,53 @@ arguments, this returns the difference of its arguments, associating
 to the left.  With one argument it returns the additive inverse of the
 argument.  \RRRRRS~21.
 
-\texttt{-C} command line flag to \texttt{scc} that will cause the
+\texttt{-C} command line flag to \texttt{s2cc} that will cause the
 compiler to compile the Scheme files \emph{source}\texttt{.sc} to C
 source in \emph{source}\texttt{.c}.  No further processing is
 performed.
 
-\texttt{-I} \emph{directory} command line flag to \texttt{scc} to
+\texttt{-I} \emph{directory} command line flag to \texttt{s2cc} to
 supply a directory to be searched by \texttt{include} when it is
 looking for a source file.  When multiple flags are supplied, the
 directories are searched in the order that the flags are specified.
 
-\texttt{-LIBDIR} \emph{directory} command line flag to \texttt{scc} to
+\texttt{-LIBDIR} \emph{directory} command line flag to \texttt{s2cc} to
 supply the \emph{directory} containing the files: predef.sc,
-objects.h, libsc.a, and optionally libsc\_p.a.
+objects.h, libs2c.a, and optionally libs2c\_p.a.
 
-\texttt{-Ob} command line flag to \texttt{scc} that controls bounds
+\texttt{-Ob} command line flag to \texttt{s2cc} that controls bounds
 checking.  When it is supplied to the compiler, no bounds checking
 code for \emph{vector} or \emph{string} accesses will be generated.
 Supplying this flag is equivalent to supplying the flags \texttt{-f
   '*bounds-check*' '\#f'}.
 
-\texttt{-Og} command line flag to \texttt{scc} that controls the
+\texttt{-Og} command line flag to \texttt{s2cc} that controls the
 generation of stack-trace debugging code. When it is supplied to the
 compiler, stack-trace code will not be generated.
 
-\texttt{-On} command line flag to \texttt{scc} that controls number
+\texttt{-On} command line flag to \texttt{s2cc} that controls number
 representation. When it is supplied to the compiler, all numbers will
 be assumed to be \emph{fixed} integers.  Supplying this flag is
 equivalent to supplying the flags \texttt{-f '*fixed-only*' '\#t'}.
 
-\texttt{-Ot} command line flag to \texttt{scc} that controls type
+\texttt{-Ot} command line flag to \texttt{s2cc} that controls type
 error checking. When it is supplied, no error checking code will be
 generated. Supplying this flag is equivalent to supplying the flags
 \texttt{-f '*type-check*' '\#f'}.
 
-\texttt{-e} command line flag to \texttt{sci}.  When it is supplied,
+\texttt{-e} command line flag to \texttt{s2ci}.  When it is supplied,
 all text read on the standard input file will be echoed on the
 standard output file.
 
-\texttt{-emacs} command line flag to \texttt{sci}.  When supplied, the
+\texttt{-emacs} command line flag to \texttt{s2ci}.  When supplied, the
 interpreter assumes that it is being run by GNU emacs.
 
-\texttt{-i} command line flag to \texttt{scc} that will combine the
+\texttt{-i} command line flag to \texttt{s2cc} that will combine the
 source and object files into a Scheme interpreter.  Module names for
 files other than Scheme source files must be supplied using the
 \texttt{-m} command line flag.
 
-\texttt{-log} command line flag to \texttt{scc} to log information
+\texttt{-log} command line flag to \texttt{s2cc} to log information
 internal to the compiler.  Each type of compiler information is
 denoted by one of the flags: \texttt{-source}, \texttt{-macro},
 \texttt{-expand}, \texttt{-closed}, \texttt{-transform},
@@ -438,26 +438,26 @@ flag \texttt{-log} is equivalent to specifying the flags:
 \texttt{-source}, \texttt{-macro}, \texttt{-expand}, \texttt{-closed},
 \texttt{-transform}, \texttt{-lambda}, and \texttt{-tree}.
 
-\texttt{-m} \emph{module} command line flag to \texttt{scc} to specify
+\texttt{-m} \emph{module} command line flag to \texttt{s2cc} to specify
 the name of a module that must be initialized by calling the procedure
 \emph{module\_\_init}.  Note that the Scheme compiler will downshift
 the alphabetic characters in module names supplied in the
 \texttt{module} directive.  Modules are initialized in the order that
 the \texttt{-m} command flags are specified.
 
-\texttt{-nh} command line flag to \texttt{sci}.  When it is supplied,
+\texttt{-nh} command line flag to \texttt{s2ci}.  When it is supplied,
 the interpreter version header will not be printed on the standard
 output file.
 
-\texttt{-np} command line flag to \texttt{sci}.  When it is supplied,
+\texttt{-np} command line flag to \texttt{s2ci}.  When it is supplied,
 prompts for input from standard input will not be printed on standard
 output.
 
-\texttt{-q} command line flag to \texttt{sci}.  When it is supplied,
+\texttt{-q} command line flag to \texttt{s2ci}.  When it is supplied,
 the result of each expression evaluation will not be printed on
 standard output.
 
-\texttt{-pg} command line flag to \texttt{scc} that will cause it to
+\texttt{-pg} command line flag to \texttt{s2cc} that will cause it to
 produce profiled code for run-time measurement using \emph{gprof}.
 The profiled library will be used in lieu of the standard Scheme
 library.
@@ -1276,7 +1276,7 @@ according to the \emph{format-template}.
 \emph{format descriptor} a \emph{list} that describes the type of
 output conversion to be done by \texttt{number->string}.  The
 supported forms are (\texttt{int}), (\texttt{fix} \emph{integer}), and
-(\texttt{sci} \emph{integer}).  \RRRRRS~21.
+(\texttt{s2ci} \emph{integer}).  \RRRRRS~21.
 
 \emph{format-template} a \emph{string} consisting of format
 descriptors and literal characters.  A format descriptor is
@@ -1747,7 +1747,7 @@ have module names begining with the letters \texttt{sc}.  All
 procedures and external variables in these modules have names that
 begin with \texttt{sc...\_}.
 
-\texttt{scc} shell command to invoke the \StoC\ Scheme compiler.  See
+\texttt{s2cc} shell command to invoke the \StoC\ Scheme compiler.  See
 the \texttt{man} page.
 
 \texttt{S2CGCINFO} environment variable that when set to 1 will log
@@ -1806,10 +1806,10 @@ the TSCP at the \emph{integer} byte of \emph{sc-pointer}.
 \emph{sc-pointer} to \emph{expression}.  The procedure returns
 \emph{expression} as its value.
 
-\texttt{sci} shell command to invoke the \StoC\ Scheme interpreter.
+\texttt{s2ci} shell command to invoke the \StoC\ Scheme interpreter.
 See the \texttt{man} page.
 
-\texttt{sci} \emph{format descriptor} for compatibility with \RRRRS.
+\texttt{s2ci} \emph{format descriptor} for compatibility with \RRRRS.
 
 (\texttt{set!}\ \emph{symbol} \emph{expression}) \emph{syntax} to set
 the location bound to \emph{symbol} to the value of \emph{expression}.
