tweak makefiles to (a) solve script directory bug, and (b) seem sensible
- tweak build process (especially generated scripts) for idempotency and transparency
- case in point: flush target Xmv
- per above, consistently default to invoking .../Xs2cc from makefiles
- allow parallelism in test/makefile target autotest
- flush target install-private (can use plain install) and modify README

--- a/README
+++ b/README
@@ -170,7 +170,7 @@ running ULTRIX.
     such as ~/bin:
 
 	8 >cd ..
-	9 >make "DESTDIR = /udir/`whoami`/bin" install-private
+	9 >make prefix=$HOME/s2c BINDIR=. LIBDIR=. LIBSUBDIR=. install
 	10 >rehash
 
     Given that this directory in the current search path, the compiler can
