correct embedded source location and show sh prompt in invocation

--- a/doc/embedded.tex
+++ b/doc/embedded.tex
@@ -150,11 +150,11 @@ application. The current time slice value is obtained by evaluating
 \subsection*{Sample embedded application}
 
 A sample embedded Scheme application, \texttt{embedded}, is found in
-the directory \texttt{server}.  A typescript of its execution shows
+the directory \texttt{scrt}.  A typescript of its execution shows
 how an application should interact with an embedded Scheme system.
 \begin{quote}
 \begin{verbatim}
-csh 990 >embedded
+$ embedded
 Embedded Scheme->C Test Bed
 0- (+ 1 2)
 3
