--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ scheme2c (2011.07.26-6) unstable; urgency=low
 
   * build/install doc/r4rs.pdf despite upstream default to not
   * upstream now supports architecture kfreebsd-i386
+  * tweak debian/rules to avoid errors from gnu make 4.0
 
- -- Barak A. Pearlmutter <bap@debian.org>  Wed, 17 Oct 2012 00:03:52 +0100
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 29 Apr 2014 11:24:09 +0100
 
 scheme2c (2011.07.26-5) unstable; urgency=low
 
