--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+scheme2c (2012.10.14-2) unstable; urgency=medium
+
+  * Build with -U_FORTIFY_SOURCE (closes: #778111), i.e., accept
+    http://patches.ubuntu.com/s/scheme2c/scheme2c_2012.10.14-1ubuntu1.patch
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Thu, 05 Nov 2015 10:09:54 +0000
+
 scheme2c (2012.10.14-1) unstable; urgency=low
 
   * build/install doc/r4rs.pdf despite upstream default to not
