--- a/doc/index.tex
+++ b/doc/index.tex
@@ -297,7 +297,7 @@ For example, if \texttt{\%record-prefix-char} is
   (list (\%record->list r)))}.
 
 \texttt{\%to-equal?}\ method to compare a \emph{record} to any value
-using \texttt{equal?}.  The method \emph{prediate} is called with the
+using \texttt{equal?}.  The method \emph{predicate} is called with the
 \emph{record} and the comparison value as its arguments.  The default
 method is \texttt{eq?}.
 
